<resources>
    <string name="app_name">Rotta</string>
    <string name="home">Home</string>
    <string name="water">Water</string>
    <string name="daily_water_ml">%1$.0f ml</string>
    <string name="custom_add_or_minus">custom add or minus</string>
    <string name="water_default_value_init">%1$.0f</string>
    <string name="water_default_value_50">+ %1$.0f</string>
    <string name="water_default_value_100">+ %1$.0f</string>
    <string name="water_default_value_250">+ %1$.0f</string>
    <string name="meal">Meal</string>
    <string name="how_was_your_meal">How was your meal?</string>
    <string name="last_added_at">Last added at %1$s with %2$sml</string>
    <string name="correct_meal">Correct</string>
    <string name="warning_meal">Warning</string>
    <string name="wrong_meal">Wrong</string>
    <string name="add_water">Add water</string>
    <string name="water_history">Today water history</string>
    <string name="water_record_amount">+%1$d ml</string>
    <string name="no_water_records_today">No water added today.</string>
    <string name="close_label">Close</string>
    <string name="water_record_edit_title">Edit insertion</string>
    <string name="water_record_delete_title">Remove insertion</string>
    <string name="water_record_delete_message">Remove this %1$d ml insertion?</string>
    <string name="record_amount_hint">Amount (ml)</string>
    <string name="configure_default_values">Configure default values</string>
    <string name="config">Config</string>
    <string name="spent">Spent</string>
    <string name="limit">Limit</string>
    <string name="total_expense_value_init">%1$.2f</string>
    <string name="daily_water">Daily water</string>
    <string name="daily_goal">Daily goal</string>
    <string name="goal">Goal</string>
    <string name="default_buttons">Default buttons</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="daily">Daily</string>
    <string name="quick_buttons">Quick Buttons</string>
    <string name="edit_default_value">Edit default value</string>
    <string name="hint_0">0</string>
    <string name="progress">Progress</string>
    <string name="circular_progress_init">%1$d%%</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="tea">Tea</string>
    <string name="dinner">Dinner</string>
    <string name="history">History</string>
    <string name="back">Back</string>
    <string name="weekly_summary">Weekly Summary</string>
    <string name="monthly_summary">Monthly Summary</string>
    <string name="weekly_water_default">Water: -</string>
    <string name="weekly_spent_default">Spent: -</string>
    <string name="weekly_meals_default">Meals: -</string>
    <string name="weekly_water_achieved">Water: %1$d out of %2$d days</string>
    <string name="weekly_spent">Spent: R$%1$.2f</string>
    <string name="weekly_meals">Meals: %1$d correct, %2$d warning and %3$d wrong</string>
    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="no_data_for_day">No data recorded for this day.</string>
    <string name="water_record">%1$s : +%2$d ml</string>
    <string name="water_sum">Total: %1$d ml</string>
    <string name="meal_record">%1$s %2$s - %3$s</string>
    <string name="meal_record_with_obs">%1$s %2$s - %3$s : %4$s</string>
    <string name="expense_sum">R$%1$.2f</string>
    <string name="history_menu">History</string>
    <string name="legend_good">Good</string>
    <string name="legend_warning">Warning</string>
    <string name="legend_bad">Bad</string>
    <string name="legend_data">Data</string>
    <string name="week_view">Week</string>
    <string name="month_view">Month</string>
    <string name="previous_week">Previous week</string>
    <string name="next_week">Next week</string>
    <string name="expenses">Expenses</string>
    <string name="trackers">Trackers</string>
    <string name="workout">Workout</string>
    <string name="medication">Medication</string>
    <string name="supplement">Supplement</string>
    <string name="tracker_name">Name</string>
    <string name="tracker_description">Description</string>
    <string name="configure_medication">What do you want to track?</string>
    <string name="configure_supplement">What do you want to track?</string>
    <string name="tracker_name_required">Please enter a name</string>
    <string name="not_completed">Not completed</string>
    <string name="completed">Completed</string>
    <string name="complete_workout">Complete workout</string>
    <string name="mark_as_taken">Mark as taken</string>
    <string name="trace">/</string>
    <string name="notify">Notify</string>
    <string name="card_statement_closing">Card statement closing</string>
    <string name="card_statement_closing_date_init_value">%1$.0f</string>
    <string name="bank_name">bank name</string>
    <string name="last_four_digits">last four digits</string>
    <string name="statement_closing_day">closing day</string>
    <string name="add_another_card">Add another card</string>
    <string name="remove_label">Remove</string>
    <string name="card_number">Card %1$d</string>
    <string name="no_cards_added">tap to add your cards</string>
    <string name="card_closing_day_value">%1$02d</string>
    <string name="card_progress_label">%1$s - %2$s</string>
    <string name="save_label">Save</string>
    <string name="last_expense">Last expense was %1$.2f from %2$s bank</string>
    <string name="expense_history">Today expenses history</string>
    <string name="expense_add_new">Add new expense</string>
    <string name="expense_add_title">Add expense</string>
    <string name="expense_record_amount">$%1$.2f</string>
    <string name="expense_record_edit_title">Edit expense</string>
    <string name="expense_record_delete_title">Remove expense</string>
    <string name="expense_record_delete_message">Remove this $%1$.2f expense from %2$s?</string>
    <string name="expense_record_amount_hint">Amount ($)</string>
    <string name="no_expenses_today">No expenses recorded today.</string>
    <string name="meal_history">Today meals history</string>
    <string name="no_meals_today">No meals logged today.</string>
    <string name="meal_history_sum">%1$d correct, %2$d warning and %3$d wrong</string>
    <string name="meal_record_edit_title">Edit meal</string>
    <string name="meal_record_delete_title">Remove meal</string>
    <string name="meal_record_delete_message">Remove this %1$s meal logged at %2$s?</string>
    <string name="workout_history">Today workout history</string>
    <string name="medication_history">Today medication history</string>
    <string name="supplement_history">Today supplement history</string>
    <string name="simple_card_history">Today history</string>
    <string name="no_workout_today">Workout not completed today.</string>
    <string name="no_medication_today">Medication not taken today.</string>
    <string name="no_supplement_today">Supplement not completed today.</string>
    <string name="no_simple_card_today">Not completed today.</string>
    <string name="simple_card_record_delete_title">Remove record</string>
    <string name="simple_card_record_delete_message">Remove the %1$s record marked at %2$s?</string>
    <string name="history_record_edit">Edit record</string>
    <string name="history_record_delete">Remove record</string>
    <string name="no_expenses_yet">No expenses recorded yet</string>
    <string name="notify_access_allowed">Allowed notify access</string>
    <string name="allowed">Allowed</string>
    <string name="not_allowed">Not allowed</string>
    <string name="other">Other</string>
    <string name="add_an_observation">you can add an observation</string>
    <string name="meal_observation_missing_title">Meal without description</string>
    <string name="meal_observation_missing_message">You saved %1$s as %2$s from the widget without a description. Do you want to add one now?</string>
    <string name="add_different_meal">Add different meal</string>
    <string name="different_meal_name">meal name</string>
    <string name="score_percentage_good">%1$d%% Good</string>
    <string name="score_percentage_warning">%1$d%% Warning</string>
    <string name="score_percentage_bad">%1$d%% Bad</string>
    <string name="meal_correct_short">Correct</string>
    <string name="meal_warning_short">Warning</string>
    <string name="meal_wrong_short">Wrong</string>
    <string name="other_meal_confirm_title">Save irregular meal</string>
    <string name="other_meal_confirm_message">You are saving a meal outside the regular ones. Continue?</string>
    <string name="continue_label">Continue</string>
    <string name="cancel_label">Cancel</string>
    <string name="meal_exists_title">Meal already exists</string>
    <string name="meal_exists_message">You already added %1$s meal. Do you want to update?</string>
    <string name="update_label">Update</string>
    <string name="gt"><![CDATA[>]]></string>
    <string name="gt2"><![CDATA[<]]></string>

    <!-- Widget -->
    <string name="widget_combined_label">Water &amp; Meal</string>
    <string name="widget_combined_description">Add water and log a meal as correct, warning or wrong</string>
    <string name="widget_water_total">%1$d</string>
    <string name="widget_water_goal">/%1$.0f ml</string>
    <string name="widget_water_completed">%1$.0f ml completed</string>
    <string name="widget_add_water_amount">+ %1$.0f</string>
    <string name="widget_water_preview_total" translatable="false">1250</string>
    <string name="widget_water_preview_goal" translatable="false">/2500 ml</string>
    <string name="widget_water_preview_completed" translatable="false">3000 ml completed</string>
    <string name="widget_water_preview_button_50" translatable="false">+ 50</string>
    <string name="widget_water_preview_button_100" translatable="false">+ 100</string>
    <string name="widget_water_preview_button_250" translatable="false">+ 250</string>
    <string name="widget_meals_completed">4 meals added</string>
    <string name="widget_expense_preview_last" translatable="false">Last: Starbucks</string>
    <string name="widget_expense_preview_total" translatable="false">R$12.50</string>
    <string name="widget_expense_no_data">No expenses recorded yet</string>
    <string name="widget_expense_hidden">••••••</string>
    <string name="widget_expense_hide">Hide expense values</string>
    <string name="widget_expense_show">Show expense values</string>
    <string name="widget_tracker_label">Routines</string>
    <string name="widget_tracker_description">Mark your workout, medication and supplement for the day</string>
    <string name="widget_tracker_done">Done</string>
    <string name="widget_tracker_mark_done">Mark %1$s as done</string>
    <string name="widget_tracker_mark_undone">Mark %1$s as not done</string>
</resources>