<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MaterialCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp">

            <ImageView
                android:id="@+id/imgViewWater"
                style="@style/iconContainer"
                android:background="@drawable/icon_background_blue"
                android:contentDescription="@string/water"
                android:src="@drawable/ic_water"
                app:tint="@color/neon_blue" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/imgViewWater">

                <TextView
                    android:id="@+id/txtWaterTitle"
                    style="@style/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water" />

                <TextView
                    android:id="@+id/txtDailyWaterDrank"
                    style="@style/textViewCardInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/textView"
                    android:includeFontPadding="false"
                    android:text="@string/water_default_value_init" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/textViewCardInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_toStartOf="@id/txtDailyWater"
                    android:includeFontPadding="false"
                    android:text="@string/trace"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/txtDailyWater"
                    style="@style/textViewCardInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="4dp"
                    android:includeFontPadding="false"
                    android:text="@string/daily_water_ml"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/txtLastWaterAddedTime"
                    style="@style/subTitleTextView.Muted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtWaterTitle"
                    android:layout_marginBottom="4dp"
                    android:text="@string/last_added_at" />
            </RelativeLayout>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressWater"
                style="@style/linearProgressBar.Water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:weightSum="3">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddWater1"
                style="@style/buttonTextStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:text="@string/water_default_value_50" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddWater2"
                style="@style/buttonTextStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:text="@string/water_default_value_100" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddWater3"
                style="@style/buttonTextStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/water_default_value_250" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>